--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h2 class="project__heading">Projects</h2>
             <div class="project__container">
                 <img src="img/natours-screenshot.png" alt="" class="project__img">
-                <a href="natours.html" target="_blank" class="project__link">
+                <a href="natours.html" class="project__link">
                     <div class="project__overlay">
                         <h5 class="project__caption">Travel Agency Website</h5>
                     </div>
@@ -54,7 +54,7 @@
             </div>
             <div class="project__container">
                 <img src="img/huddle-screenshot.png" alt="" class="project__img">
-                <a href="huddle.html" target="_blank" class="project__link">
+                <a href="huddle.html" class="project__link">
                     <div class="project__overlay">
                         <h5 class="project__caption">Social App Website</h5>
                     </div>
@@ -62,7 +62,7 @@
             </div>
             <div class="project__container">
                 <img src="img/nexter-screenshot.png" alt="" class="project__img">
-                <a href="natours.html" target="_blank" class="project__link">
+                <a href="natours.html" class="project__link">
                     <div class="project__overlay">
                         <h5 class="project__caption">Real Estate Website</h5>
                     </div>
@@ -106,10 +106,7 @@
             <span class="about__caption">Todd Pettee<br>Front-end Developer</span>
             <div class="about__story">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip
-                    ex ea commodo consequat.</p>
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
                     fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
                     deserunt mollit anim id est laborum.</p>
