--- a/trillo.html
+++ b/trillo.html
@@ -39,7 +39,7 @@
     <main class="main">
         <section class="project-details">
             <h1 class="project-details__title">Social App Project</h1>
-            <img src="img/huddle-screenshot.png" alt="" class="project-details__img">
+            <img src="img/trillo-screenshot.png" alt="" class="project-details__img">
             <div class="project-details__list">
                 <h5 class="project-details__name"><span>Name:&nbsp;</span> Huddle</h5>
                 <h5 class="project-details__technologies"><span>Skills:&nbsp;</span> HTML, CSS, Sass</h5>
@@ -50,7 +50,7 @@
                 <p class="project-details__description">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </p>
-                <a href="proj/huddle/index.html" class="project-details__button--site">Visit Site</a>
+                <a href="proj/trillo/index.html" class="project-details__button--site">Visit Site</a>
                 <a href="https://github.com/toddpettee" class="project-details__button--code">View Code</a>
             </div>
             <div class="project-process">
