--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,600,700,800,900&display=swap" rel="stylesheet" type="text/css">
 </head>
 
-<body>
+<body class="page--home">
     <a id="scroll-to-home"></a>
     <header class="header">
         <div class="header__logo">
@@ -19,17 +19,19 @@
             <h1 class="header__logo-text">todd pettee</h1>
         </div>
         
-        <div onclick="toggleMenu()" class="header__nav-icon">
-            <span class="header__nav-lines"></span>
+        <div onclick="toggleMenu();hideBar()" class="header__nav-icon open">
+            <span class="header__nav-line-1"></span>
+            <span class="header__nav-line-2"></span>
+            <span class="header__nav-line-3"></span>
         </div>
 
         <nav class="header__nav" style="display: none;">
             <ul class="header__nav-list">
-                <li onclick="hideMenu()" class="header__nav-item"><a href="#scroll-to-home" class="header__nav-link">Home</a></li>
-                <li onclick="hideMenu()" class="header__nav-item"><a href="#scroll-to-projects" class="header__nav-link">Projects</a></li>
-                <li onclick="hideMenu()" class="header__nav-item"><a href="#scroll-to-skills" class="header__nav-link">Skills</a></li>
-                <li onclick="hideMenu()" class="header__nav-item"><a href="#scroll-to-about" class="header__nav-link">About</a></li>
-                <li onclick="hideMenu()" class="header__nav-item"><a href="#scroll-to-contact" class="header__nav-link">Contact</a></li>
+                <li onclick="hideMenu();hideBar()" class="header__nav-item"><a href="#scroll-to-home" class="header__nav-link">Home</a></li>
+                <li onclick="hideMenu();hideBar()" class="header__nav-item"><a href="#scroll-to-projects" class="header__nav-link">Projects</a></li>
+                <li onclick="hideMenu();hideBar()" class="header__nav-item"><a href="#scroll-to-skills" class="header__nav-link">Skills</a></li>
+                <li onclick="hideMenu();hideBar()" class="header__nav-item"><a href="#scroll-to-about" class="header__nav-link">About</a></li>
+                <li onclick="hideMenu();hideBar()" class="header__nav-item"><a href="#scroll-to-contact" class="header__nav-link">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -62,7 +64,7 @@
             </div>
             <div class="project__container">
                 <img src="img/nexter-screenshot.png" alt="" class="project__img">
-                <a href="natours.html" target="_blank" class="project__link">
+                <a href="nexter.html" target="_blank" class="project__link">
                     <div class="project__overlay">
                         <h5 class="project__caption">Real Estate Website</h5>
                     </div>
@@ -131,14 +133,14 @@
             </div>
             <div class="contact__icon-box">
                 <svg class="contact__icon">
-                    <a href="https://github.com/tpettee" target="_blank" class="contact__icon-link">
+                    <a href="https://github.com/toddpettee" target="_blank" class="contact__icon-link">
                         <use href="img/sprite.svg#github-icon-white"></use>
                     </a>
                 </svg>
             </div>
             <div class="contact__icon-box">
                 <svg class="contact__icon">
-                    <a href="mailto:hello@toddpettee.com" class="contact__icon-link">
+                    <a href="mailto:pettee@gmail.com" class="contact__icon-link">
                         <use href="img/sprite.svg#mail-icon-white"></use>
                     </a>
                 </svg>
@@ -151,7 +153,7 @@
     </main>
 
     <footer class="footer">
-        <p class="footer__copyright">Built with <a href="http://bemskel.com" class="footer__link">BEMSkel</a></p>
+        <p class="footer__copyright">Built with <a href="http://bemskel.com" class="footer__link">BEMSkel</a><br> Self-hosted on <a href="https://httpd.apache.org/" class="footer__link" target="_blank">Debian</a> and <a href="https://httpd.apache.org/" class="footer__link" target="_blank">Apache</a></p>
     </footer>
     <script src="js/main.js"></script>
 </body>
